#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-09
2014-03-28 Mikhail Dubrovin
- in PnccdCommonModeV1.h change default common mode algorithm number to 2 for pnCCD
	
Tag: V00-05-08
2014-03-06 Mikhail Dubrovin
- in CsPadCommonModeSubV1.cpp
	- correct the list of default parameters introduced by cpo
	- do not consider pixels with any status different form 0 (in the past only status=1 were discarded)
	
Tag: V00-05-07
2014-03-03 Mikhail Dubrovin
- add include/CsPad*V2.h modules for CsPad and CsPad2x2 for types:
	Pedestals, PixelStatus, PixelRms, PixelGain, CommonMode
	
Tag: V00-05-06
2014-02-08 Mikhail Dubrovin
- add class PnccdPixelRmsV1
A         include/PnccdPixelRmsV1.h
A         src/PnccdPixelRmsV1.cpp
	
Tag: V00-05-05
2014-02-07 Mikhail Dubrovin
- in PnccdCommonModeV1 extend CMSize up to 16 parameters
- in include/GlobalMethods.h load_pars_from_file add parameter check_bits

Tag: V00-05-04
2014-02-05 Mikhail Dubrovin
- cosmetic changes in Pnccd* modules

Tag: V00-05-03
2014-02-01 Christopher O'Grady
- put in cspad common-mode defaults of "1 50 10" in case common mode file doesn't exist
	
Tag: V00-05-02
2014-01-30 Mikhail Dubrovin
- in /GlobalMethods.h to get rid of compilation errors in RHEL6 
	include <typeinfo>  // for typeid 
	include <stdint.h>  // for uint8_t, uint16_t etc.
	
Tag: V00-05-01
2014-01-29 Mikhail Dubrovin
- add new calibration types for pnCCD:
	PnccdBaseV1
	PnccdPixelGainV1
	PnccdPedestalsV1
	PnccdPixelStatusV1
	PnccdCommonModeV1
	GlobalMethods
	
Tag: V00-05-00
2013-09-24 Andy Salnikov
- pdsdata is now DDL-based, with a lot of changes to interface
- modify all dependencies in this package