@@ -3,7 +3,7 @@
 
 //--------------------------------------------------------------------------
 // File and Version Information:
-//      $Id: CsPadBaseV2.h 1 2014-03-01 18:00:00Z dubrovin@SLAC.STANFORD.EDU $
+//      $Id$
 //
 // Description:
 //	Class CsPadBaseV2.
@@ -43,7 +43,7 @@ namespace pdscalibdata {
  *
  *  @see AdditionalClass
  *
- *  @version $Id: CsPadBaseV2.cpp 2014-03-01 18:00:00Z dubrovin@SLAC.STANFORD.EDU $
+ *  @version $Id$
  *
  *  @author Mikhail Dubrovin
  */
