@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-10
+2014-04-18 Mikhail Dubrovin
+- ALL modules: psvn mktxtprop CalibManager/src/*.py - add properties to files
+- add src/SvnProps.py
+	
 Tag: V00-05-09
 2014-03-28 Mikhail Dubrovin
 - in PnccdCommonModeV1.h change default common mode algorithm number to 2 for pnCCD
